# governance-drift-toolkit

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  _typos.toml  pyproject.toml  vulture_whitelist.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: alerting.md  calibration.md  demo_datasets.md  deployment.md  monitors.md
examples/: credit_scoring.py  fraud_detection.py  ieee_cis_demo.py  lending_club_demo.py
scripts/: check_headers.py
src/drift/: __init__.py  composite.py  config.py  harmful_shift.py  proxy_sufficiency.py  response.py  sequential.py  types.py
src/drift/monitors/: __init__.py  cross_model.py  feature_drift.py  operational.py  outcome_maturity.py  proxy_ground_truth.py  score_distribution.py  uncertainty.py
src/integrations/: __init__.py  decision_event_schema.py  evidence_collector.py  evidence_sufficiency.py  flink.py
tests/: conftest.py
tests/fixtures/: distributions.py
tests/integration/: test_end_to_end.py
tests/simulation/: test_blind_period.py
tests/unit/: test_composite.py  test_config.py  test_decision_event_schema.py  test_evidence_collector.py  test_evidence_sufficiency.py  test_feature_drift.py  test_flink.py  test_harmful_shift.py  test_package_api.py  test_properties.py  test_proxy_sufficiency.py  test_response.py  test_score_distribution.py  test_sequential.py  test_types.py  test_uncertainty.py
