[build-system]
requires = ["setuptools>=69,<80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "governance-drift-toolkit"
version = "0.1.0"
requires-python = ">=3.11,<4"
description = "Label-free monitoring of governance evidence degradation in risk decision systems"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "Oleg Solozobov"}]
keywords = [
  "governance drift",
  "proxy monitoring",
  "evidence degradation",
  "delayed ground truth",
  "drift detection",
  "model monitoring"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy>=1.24,<3",
  "scipy>=1.11,<2"
]

[project.optional-dependencies]
sufficiency = [
  "evidence-sufficiency-calc"
]
dev = [
  "pytest>=7,<9",
  "pytest-cov>=4,<8",
  "ruff>=0.4,<1",
  "mypy>=1.8,<2",
  "pre-commit>=3,<5",
  "hypothesis>=6.100,<7"
]
demo = [
  "pandas>=2,<3",
  "scikit-learn>=1.3,<2"
]

[tool.coverage]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__",
  "@overload",
  "raise NotImplementedError"
]

# --------------------------------------------------------------------------- #
# coverage
# --------------------------------------------------------------------------- #
[tool.coverage.run]
source = ["drift", "integrations"]
branch = true

# --------------------------------------------------------------------------- #
# mypy  — strict type checking
# --------------------------------------------------------------------------- #
[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sufficiency.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false

# --------------------------------------------------------------------------- #
# pytest
# --------------------------------------------------------------------------- #
[tool.pytest]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers --strict-config"
xfail_strict = true
filterwarnings = ["error"]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: end-to-end integration tests",
  "simulation: simulation tests over time windows"
]

# --------------------------------------------------------------------------- #
# ruff  — linter + formatter
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "W", # pycodestyle warnings
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "C4", # flake8-comprehensions
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "RSE", # flake8-raise
  "RUF", # Ruff-specific rules
  "PGH", # pygrep-hooks
  "PERF", # perflint
  "N", # pep8-naming
  "D", # pydocstyle (numpy convention)
  "ANN", # flake8-annotations
  "S", # flake8-bandit (security)
  "C90", # mccabe complexity
  "PL" # pylint subset
]
ignore = [
  "D100", # missing docstring in public module (covered by module-level)
  "D104", # missing docstring in public package
  "D203", # one-blank-line-before-class (conflicts with D211)
  "D213", # multi-line-summary-second-line (conflicts with D212)
  "S101", # use of assert (fine in tests)
  "PLR0913", # too many arguments — unavoidable in config-heavy APIs
  "D105", # __post_init__ docstrings add no value on dataclass validators
  "PLR2004", # magic values are mathematical constants / tolerances
  "PLC0415", # local imports acceptable in methods using them sparingly
  "RUF043" # regex metacharacters in match= patterns are intentional
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "D", # no docstrings required in tests
  "ANN", # no type annotations required in tests
  "S101", # assert is fine in tests
  "PLR2004", # magic values are fine in tests
  "PT011" # broad pytest.raises is fine when match pattern adds no value
]
"examples/**/*.py" = [
  "D", # no docstrings required in examples
  "ANN", # no type annotations required in examples
  "T20", # print() is fine in examples
  "E501" # long format strings in examples are OK
]
"scripts/**/*.py" = [
  "T20", # print() is fine in scripts
  "S603", # subprocess calls are fine in scripts
  "INP001" # scripts/ is not a package
]
"vulture_whitelist.py" = [
  "F841", # unused variables are the point of a whitelist
  "D", # no docstrings needed for whitelist entries
  "ANN" # no annotations needed
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-branches = 12
max-statements = 50
max-args = 8

[tool.setuptools.packages.find]
where = ["src"]
